# ipc_comparison

./: LICENSE  README.md
client/: SharedMemoryChannel.php  Socket.php  test_client.php
server/: CMakeLists.txt  SharedMemoryChannel.cpp  SharedMemoryChannel.h  SynchronousSocket.cpp  SynchronousSocket.h  ipc_server.cpp  mutex.cpp  mutex.h  task.cpp  task.h
